--- a/front-end/package.json
+++ b/front-end/package.json
@@ -11,11 +11,13 @@
   "dependencies": {
     "@tailwindcss/aspect-ratio": "^0.4.0",
     "@tailwindcss/forms": "^0.5.2",
+    "axios": "^0.27.2",
     "classnames": "^2.3.1",
     "next": "12.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
+    "react-query": "3.34.19",
     "sass": "^1.54.3"
   },
   "devDependencies": {
