--- a/front-end/package.json
+++ b/front-end/package.json
@@ -17,6 +17,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
+    "react-loading-skeleton": "^3.1.0",
     "react-query": "3.34.19",
     "sass": "^1.54.3"
   },
