--- a/front-end/package.json
+++ b/front-end/package.json
@@ -9,16 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.4",
     "@tailwindcss/aspect-ratio": "^0.4.0",
     "@tailwindcss/forms": "^0.5.2",
+    "@types/react-redux": "^7.1.24",
+    "@types/react-redux-toastr": "^7.6.2",
     "axios": "^0.27.2",
     "classnames": "^2.3.1",
     "next": "12.2.4",
+    "nextjs-progressbar": "^0.0.14",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
     "react-loading-skeleton": "^3.1.0",
     "react-query": "3.34.19",
+    "react-redux": "^8.0.2",
+    "react-redux-toastr": "^7.6.9",
     "sass": "^1.54.3"
   },
   "devDependencies": {
